Changed some texts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awsome Library -->
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>Leon Template One</title>
+    <title>E-Markets</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Google Fonts -->
@@ -43,7 +43,7 @@
     <!-- Start Landing Section -->
     <div class="landing">
       <div class="intro-text">
-        <h1>Hello There!</h1>
+        <h1>Welcome to E-Markets</h1>
         <p>We are Leon - Super Creative &#38; Minimal Agency Web Template</p>
       </div>
     </div>
@@ -53,26 +53,41 @@
       <div class="container">
         <div class="feat">
           <i class="fa-solid fa-magic fa-3x"></i>
-          <h3>Tell Us Your Idea</h3>
+          <h3>ABOUT</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut lab
+            We assist Egyptian companies in
+exporting their products by providing
+innovative, practical, and unique
+solutions.
+          </p>
+        </div>
+        <div class="feat">
+          <i class="fa-solid fa-magic fa-3x"></i>
+          <h3>Our Vision</h3>
+          <p>
+            Offering innovative solutions and
+            alternatives to traditional export
+            systems, we aim to maximize benefits
+            while saving time, effort, and money.
           </p>
         </div>
         <div class="feat">
           <i class="fa-solid fa-gem fa-3x"></i>
-          <h3>We Will Do All The WOrk</h3>
+          <h3>Our Mission</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut lab
+            By supplying essential marketing
+            information, analysis, and modern
+            mechanisms, we aim to solidify the
+            strong presence of Egyptian products at
+            the forefront of global trade.
           </p>
         </div>
         <div class="feat">
           <i class="fas fa-globe fa-3x"></i>
-          <h3>Your Product is Worldwide</h3>
+          <h3>Our Team</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut lab
+            Experts in export, international
+            marketing and information technology.
           </p>
         </div>
       </div>
@@ -81,29 +96,32 @@
     <!-- Start Services -->
     <div class="services" id="services">
       <div class="container">
-        <h2 class="special-headings">services</h2>
-        <p>Don't be busy, be productive</p>
+        <h2 class="special-headings">Our Application</h2>
+        <p>We provide a cross-platform application, Simply provide the name of your product
+            or its "HS-CODE,
+            " and we will furnish you
+            with the following information:</p>
+        <p></p>
         <div class="services-content">
           <div class="col">
             <div class="serv">
               <i class="fa-sharp fa-solid fa-pen fa-2x"></i>
               <div class="texts">
-                <h3>Graphic Design</h3>
+                <h3>Target Market</h3>
                 <p>
-                  Graphic design is the process of visual communication and
-                  problem-solving using one or more of typography, photography
-                  and illustration.
+                    We will guide you to target markets specifically importing
+                    your product, as not all global markets may do so.
                 </p>
               </div>
             </div>
             <div class="serv">
               <i class="fa-solid fa-sliders fa-2x"></i>
               <div class="texts">
-                <h3>UI &#38; UX</h3>
+                <h3>Targeted Importers</h3>
                 <p>
-                  Process of enhancing user satisfaction with a product by
-                  improving the usability, accessibility, and pleasure provided
-                  in the interaction.
+                    We will identify importers interested in your product,
+                    providing you with comprehensive contact details such
+                    as email, WhatsApp, and more.
                 </p>
               </div>
             </div>
@@ -112,20 +130,22 @@
             <div class="serv">
               <i class="fa-sharp fa-solid fa-link fa-2x"></i>
               <div class="texts">
-                <h3>Web Design</h3>
+                <h3>Market Analysis</h3>
                 <p>
-                  Web design encompasses many different skills and disciplines
-                  in the production and maintenance of websites.
+                    We provide all the analyses you need to penetrate these
+                    markets, including PESTEL, SWOT, and Competitive
+                    Analysis.
                 </p>
               </div>
             </div>
             <div class="serv">
               <i class="fa-solid fa-desktop fa-2x"></i>
               <div class="texts">
-                <h3>Web Development</h3>
+                <h3>Marketing Plan</h3>
                 <p>
-                  Web development is a broad term for the work involved in
-                  developing a web site for the Internet or an intranet.
+                    We will assist you with a tailored marketing plan
+                    designed to enable you to sell your products successfully
+                    within these target markets.
                 </p>
               </div>
             </div>
@@ -189,10 +209,10 @@
           </div>
           <div class="texts">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliqui
+                We assist Egyptian companies in
+                exporting their products by providing
+                innovative, practical, and unique
+                solutions
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -213,7 +233,7 @@
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
           <!-- <h3>ahmeed.elbaz@gmail.com</h3> -->
-          <a href="mailto:ahmeed.elbaz@gmail.com">ahmeed.elbaz@gmail.com</a>
+          <a href="mailto:ahmeed.elbaz@gmail.com">info@e-markets.org</a>
           <div class="contacts">
             <p>Find us on social networks:</p>
             <i class="fa-brands fa-telegram"></i>
@@ -226,7 +246,7 @@
     <!-- End Contact Section -->
     <!-- Start Footer -->
     <footer>
-      &copy; 2023 - <span class="leon">Leon</span>,All Right Reserved
+      &copy; 2024 - <span class="emarkets">E-Markets</span>,All Right Reserved
     </footer>
     <!-- End Footer -->
   </body>
