Added new image with some text changes

--- a/index.html
+++ b/index.html
@@ -201,18 +201,19 @@ solutions.
     <!-- Start About Section -->
     <div class="about" id="about">
       <div class="container">
-        <h2 class="special-headings">about</h2>
-        <p>Less is more work</p>
+        <h2 class="special-headings">With our advanced</h2>
+        <p>Marketing tools</p>
         <div class="content">
           <div class="shapes">
             <img src="images/plant.jpg" alt="plant" />
           </div>
           <div class="texts">
             <p>
-                We assist Egyptian companies in
-                exporting their products by providing
-                innovative, practical, and unique
-                solutions
+                a single click allows you to
+                simultaneously send thousands
+                of emails and engage in
+                conversations with your
+                worldwide target customers.
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
