Some texts and sections changes, added new image

--- a/index.html
+++ b/index.html
@@ -216,10 +216,32 @@ solutions.
                 worldwide target customers.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliqu
+              <!-- You may add some text here -->
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End About Section -->
+    <!-- Start About Section -->
+    <div class="about" id="about">
+      <div class="container">
+        <h2 class="special-headings">E-MARKETS DATABASE</h2>
+        <p></p>
+        <div class="content">
+          <div class="shapes">
+            <img src="images/cloud.jpg" alt="plant" />
+          </div>
+          <div class="texts">
+            <p>
+                a single click allows you to
+                simultaneously send thousands
+                of emails and engage in
+                conversations with your
+                worldwide target customers.
+            </p>
+            <p>
+              <!-- You may add some text here -->
             </p>
           </div>
         </div>
