Some color and position changes

--- a/index.html
+++ b/index.html
@@ -204,9 +204,6 @@ solutions.
         <h2 class="special-headings">With our advanced</h2>
         <p>Marketing tools</p>
         <div class="content">
-          <div class="shapes">
-            <img src="images/plant.jpg" alt="plant" />
-          </div>
           <div class="texts">
             <p>
                 a single click allows you to
@@ -219,12 +216,16 @@ solutions.
               <!-- You may add some text here -->
             </p>
           </div>
+          <div class="shapes">
+            <img src="images/ai.jpg" alt="plant" />
+          </div>
+          
         </div>
       </div>
     </div>
     <!-- End About Section -->
     <!-- Start About Section -->
-    <div class="about" id="about">
+    <div class="about" id="database">
       <div class="container">
         <h2 class="special-headings">E-MARKETS DATABASE</h2>
         <p></p>
