Added new images , changed colors and some texts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="landing">
       <div class="intro-text">
         <h1>Welcome to E-Markets</h1>
-        <p>We are Leon - Super Creative &#38; Minimal Agency Web Template</p>
+        <p>Trade Safely and Easily</p>
       </div>
     </div>
     <!-- End Landing Section -->
@@ -52,17 +52,17 @@
     <div class="features">
       <div class="container">
         <div class="feat">
-          <i class="fa-solid fa-magic fa-3x"></i>
+          <i class="fa-solid fa-info-circle fa-3x"></i>
           <h3>ABOUT</h3>
           <p>
             We assist Egyptian companies in
-exporting their products by providing
-innovative, practical, and unique
-solutions.
+            exporting their products by providing
+            innovative, practical, and unique
+            solutions.
           </p>
         </div>
         <div class="feat">
-          <i class="fa-solid fa-magic fa-3x"></i>
+          <i class="fa-solid fa-eye fa-3x"></i>
           <h3>Our Vision</h3>
           <p>
             Offering innovative solutions and
@@ -72,7 +72,7 @@ solutions.
           </p>
         </div>
         <div class="feat">
-          <i class="fa-solid fa-gem fa-3x"></i>
+          <i class="fa-solid fa-flag fa-3x"></i>
           <h3>Our Mission</h3>
           <p>
             By supplying essential marketing
@@ -83,7 +83,7 @@ solutions.
           </p>
         </div>
         <div class="feat">
-          <i class="fas fa-globe fa-3x"></i>
+          <i class="fas fa-people-group fa-3x"></i>
           <h3>Our Team</h3>
           <p>
             Experts in export, international
@@ -105,7 +105,7 @@ solutions.
         <div class="services-content">
           <div class="col">
             <div class="serv">
-              <i class="fa-sharp fa-solid fa-pen fa-2x"></i>
+              <i class="fa-sharp fa-solid fa-map-location-dot fa-2x"></i>
               <div class="texts">
                 <h3>Target Market</h3>
                 <p>
@@ -115,7 +115,7 @@ solutions.
               </div>
             </div>
             <div class="serv">
-              <i class="fa-solid fa-sliders fa-2x"></i>
+              <i class="fa-solid fa-drivers-license fa-2x"></i>
               <div class="texts">
                 <h3>Targeted Importers</h3>
                 <p>
@@ -128,7 +128,7 @@ solutions.
           </div>
           <div class="col">
             <div class="serv">
-              <i class="fa-sharp fa-solid fa-link fa-2x"></i>
+              <i class="fa-sharp fa-solid fa-database fa-2x"></i>
               <div class="texts">
                 <h3>Market Analysis</h3>
                 <p>
@@ -139,7 +139,7 @@ solutions.
               </div>
             </div>
             <div class="serv">
-              <i class="fa-solid fa-desktop fa-2x"></i>
+              <i class="fa-solid fa-diagram-project fa-2x"></i>
               <div class="texts">
                 <h3>Marketing Plan</h3>
                 <p>
@@ -160,41 +160,38 @@ solutions.
     <!-- Start Portfolio -->
     <div class="portfolio" id="portfolio">
       <div class="container">
-        <h2 class="special-headings">portfolio</h2>
-        <p>If you do it right, it will last forever.</p>
+        <h2 class="special-headings">Download</h2>
+        <p>Use E-Markets across your devices.</p>
         <div class="projects">
           <div class="col">
-            <img src="images/project1.jpg" alt="project1" />
+            <img src="images/mobile.jpg" alt="Android" />
             <div class="texts">
-              <h3>Project Here</h3>
+              <h3>Android</h3>
               <p>
-                My creative ability is very difficult to measure because it can
-                manifest in so many surprising and.
+                Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.
               </p>
             </div>
           </div>
           <div class="col">
-            <img src="images/project2.jpeg" alt="project2" />
+            <img src="images/windows.jpg" alt="Windwos" />
             <div class="texts">
-              <h3>Project Here</h3>
+              <h3>Windows</h3>
               <p>
-                My creative ability is very difficult to measure because it can
-                manifest in so many surprising and.
+                Requires Windows 10 or newer.
               </p>
             </div>
           </div>
           <div class="col">
-            <img src="images/project3.jpg" alt="project3" />
+            <img src="images/web.jpg" alt="project3" />
             <div class="texts">
-              <h3>Project Here</h3>
+              <h3>E-Markets Web</h3>
               <p>
-                My creative ability is very difficult to measure because it can
-                manifest in so many surprising and.
+                Don't see your device supported? Use E-Markets on your browser.
               </p>
             </div>
           </div>
         </div>
-        <button>Show Me More</button>
+        <!-- <button>Show Me More</button> -->
       </div>
     </div>
     <!-- End Portfolio -->
@@ -270,7 +267,7 @@ solutions.
     <!-- End Contact Section -->
     <!-- Start Footer -->
     <footer>
-      &copy; 2024 - <span class="emarkets">E-Markets</span>,All Right Reserved
+      &copy; 2024 - <span class="emarkets">E-Markets</span>, All Right Reserved
     </footer>
     <!-- End Footer -->
   </body>
