Color and text changes

--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
     <!-- Start About Section -->
     <div class="about" id="about">
       <div class="container">
-        <h2 class="special-headings">With our advanced</h2>
-        <p>Marketing tools</p>
+        <h2 class="special-headings">Marketing tools</h2>
+        <!-- <p>Marketing tools</p> -->
         <div class="content">
           <div class="texts">
             <p>
-                a single click allows you to
+                A single click allows you to
                 simultaneously send thousands
                 of emails and engage in
                 conversations with your
@@ -224,19 +224,18 @@
     <!-- Start About Section -->
     <div class="about" id="database">
       <div class="container">
-        <h2 class="special-headings">E-MARKETS DATABASE</h2>
-        <p></p>
+        <h2 class="special-headings">E-Markets Database</h2>
+        <p>Just a click away, and see the world by eyes of Experts</p>
         <div class="content">
           <div class="shapes">
             <img src="images/cloud.jpg" alt="plant" />
           </div>
           <div class="texts">
             <p>
-                a single click allows you to
-                simultaneously send thousands
-                of emails and engage in
-                conversations with your
-                worldwide target customers.
+              The premier and most extensive
+              commercial database designed to assist
+              Egyptian suppliers in exporting their
+              products.
             </p>
             <p>
               <!-- You may add some text here -->
@@ -249,7 +248,7 @@
     <!-- Start Contact Section -->
     <div class="contact" id="contact">
       <div class="container">
-        <h2 class="special-headings">contact</h2>
+        <h2 class="special-headings">Contact</h2>
         <p>We are here to create</p>
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
