Added new color and Changed text style

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="contact" id="contact">
       <div class="container">
         <h2 class="special-headings">Contact</h2>
-        <p>We are here to create</p>
+        <p>Connect With Us for Services, Support, and More</p>
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
           <!-- <h3>ahmeed.elbaz@gmail.com</h3> -->
