Moved database section o top

--- a/index.html
+++ b/index.html
@@ -93,6 +93,30 @@
       </div>
     </div>
     <!-- End Features Section -->
+    <!-- Start Database Section -->
+    <div class="about" id="database">
+      <div class="container">
+        <h2 class="special-headings">E-Markets Database</h2>
+        <p>Just a click away, and see the world by eyes of Experts</p>
+        <div class="content">
+          <div class="shapes">
+            <img src="images/cloud.jpg" alt="plant" />
+          </div>
+          <div class="texts">
+            <p>
+              The premier and most extensive
+              commercial database designed to assist
+              Egyptian suppliers in exporting their
+              products.
+            </p>
+            <p>
+              <!-- You may add some text here -->
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Database Section -->
     <!-- Start Services -->
     <div class="services" id="services">
       <div class="container">
@@ -221,30 +245,6 @@
       </div>
     </div>
     <!-- End About Section -->
-    <!-- Start About Section -->
-    <div class="about" id="database">
-      <div class="container">
-        <h2 class="special-headings">E-Markets Database</h2>
-        <p>Just a click away, and see the world by eyes of Experts</p>
-        <div class="content">
-          <div class="shapes">
-            <img src="images/cloud.jpg" alt="plant" />
-          </div>
-          <div class="texts">
-            <p>
-              The premier and most extensive
-              commercial database designed to assist
-              Egyptian suppliers in exporting their
-              products.
-            </p>
-            <p>
-              <!-- You may add some text here -->
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End About Section -->
     <!-- Start Contact Section -->
     <div class="contact" id="contact">
       <div class="container">
@@ -253,7 +253,7 @@
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
           <!-- <h3>ahmeed.elbaz@gmail.com</h3> -->
-          <a href="mailto:ahmeed.elbaz@gmail.com">info@e-markets.org</a>
+          <a href="mailto:info@e-markets.org">info@e-markets.org</a>
           <div class="contacts">
             <p>Find us on social networks:</p>
             <i class="fa-brands fa-telegram"></i>
