Some ui changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img src="images/logo.png" alt="" class="logo" />
+        <img src="images/logo.png" alt="E-markets" class="logo" />
         <div class="links">
           <span class="icon">
             <span></span>
@@ -43,6 +43,7 @@
     <!-- Start Landing Section -->
     <div class="landing">
       <div class="intro-text">
+        <img src="images/logo.png" alt="E-markets" class="logo" />
         <h1>Welcome to E-Markets</h1>
         <p>Trade Safely and Easily</p>
       </div>
