--- a/index.html
+++ b/index.html
@@ -254,13 +254,29 @@
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
           <!-- <h3>ahmeed.elbaz@gmail.com</h3> -->
-          <a href="mailto:info@e-markets.org">info@e-markets.org</a>
+          <a href="mailto:info@e-markets.org"><i class="fa-solid fa-mail-bulk"></i> info@e-markets.org</a>
+          <a href="tel:+201211766667"><i class="fa-solid fa-phone"></i> +201211766667</a>
           <div class="contacts">
             <p>Find us on social networks:</p>
-            <i class="fa-brands fa-telegram"></i>
-            <i class="fa-brands fa-google-plus-g"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="https://www.facebook.com/EMarkets.Eg">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="http://linkedin.com/company/emarkets-eg">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="http://twitter.com/emarkets_eg">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/emarkets_eg">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/@E-Markets-eg">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
           </div>
+          <a href="https://maps.app.goo.gl/5Ck5bi9nKmUcmWEj6"><i class="fa-solid fa-map-marker-alt"></i> 45 Qambiz st, infront of shooting club gate
+            -Dokki- Giza, Egypt
+            </a>
         </div>
       </div>
     </div>
