--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img src="images/logo.png" alt="E-markets" class="logo" />
+        <img src="images/logo.png" alt="E-markets" class="logo">
         <div class="links">
           <span class="icon">
             <span></span>
