removed some unused images, some dimensions changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img src="images/logo.png" alt="E-markets" class="logo">
+        <img src="images/logo.png" alt="E-markets" class="logo" />
         <div class="links">
           <span class="icon">
             <span></span>
@@ -56,39 +56,34 @@
           <i class="fa-solid fa-info-circle fa-3x"></i>
           <h3>ABOUT</h3>
           <p>
-            We assist Egyptian companies in
-            exporting their products by providing
-            innovative, practical, and unique
-            solutions.
+            We assist Egyptian companies in exporting their products by
+            providing innovative, practical, and unique solutions.
           </p>
         </div>
         <div class="feat">
           <i class="fa-solid fa-eye fa-3x"></i>
           <h3>Our Vision</h3>
           <p>
-            Offering innovative solutions and
-            alternatives to traditional export
-            systems, we aim to maximize benefits
-            while saving time, effort, and money.
+            Offering innovative solutions and alternatives to traditional export
+            systems, we aim to maximize benefits while saving time, effort, and
+            money.
           </p>
         </div>
         <div class="feat">
           <i class="fa-solid fa-flag fa-3x"></i>
           <h3>Our Mission</h3>
           <p>
-            By supplying essential marketing
-            information, analysis, and modern
-            mechanisms, we aim to solidify the
-            strong presence of Egyptian products at
-            the forefront of global trade.
+            By supplying essential marketing information, analysis, and modern
+            mechanisms, we aim to solidify the strong presence of Egyptian
+            products at the forefront of global trade.
           </p>
         </div>
         <div class="feat">
           <i class="fas fa-people-group fa-3x"></i>
           <h3>Our Team</h3>
           <p>
-            Experts in export, international
-            marketing and information technology.
+            Experts in export, international marketing and information
+            technology.
           </p>
         </div>
       </div>
@@ -101,14 +96,12 @@
         <p>Just a click away, and see the world by eyes of Experts</p>
         <div class="content">
           <div class="shapes">
-            <img src="images/cloud.jpg" alt="plant" />
+            <img src="images/cloud.jpg" alt="database" />
           </div>
           <div class="texts">
             <p>
-              The premier and most extensive
-              commercial database designed to assist
-              Egyptian suppliers in exporting their
-              products.
+              The premier and most extensive commercial database designed to
+              assist Egyptian suppliers in exporting their products.
             </p>
             <p>
               <!-- You may add some text here -->
@@ -122,10 +115,11 @@
     <div class="services" id="services">
       <div class="container">
         <h2 class="special-headings">Our Application</h2>
-        <p>We provide a cross-platform application, Simply provide the name of your product
-            or its "HS-CODE,
-            " and we will furnish you
-            with the following information:</p>
+        <p>
+          We provide a cross-platform application, Simply provide the name of
+          your product or its "HS-CODE, " and we will furnish you with the
+          following information:
+        </p>
         <p></p>
         <div class="services-content">
           <div class="col">
@@ -134,8 +128,8 @@
               <div class="texts">
                 <h3>Target Market</h3>
                 <p>
-                    We will guide you to target markets specifically importing
-                    your product, as not all global markets may do so.
+                  We will guide you to target markets specifically importing
+                  your product, as not all global markets may do so.
                 </p>
               </div>
             </div>
@@ -144,9 +138,9 @@
               <div class="texts">
                 <h3>Targeted Importers</h3>
                 <p>
-                    We will identify importers interested in your product,
-                    providing you with comprehensive contact details such
-                    as email, WhatsApp, and more.
+                  We will identify importers interested in your product,
+                  providing you with comprehensive contact details such as
+                  email, WhatsApp, and more.
                 </p>
               </div>
             </div>
@@ -157,9 +151,8 @@
               <div class="texts">
                 <h3>Market Analysis</h3>
                 <p>
-                    We provide all the analyses you need to penetrate these
-                    markets, including PESTEL, SWOT, and Competitive
-                    Analysis.
+                  We provide all the analyses you need to penetrate these
+                  markets, including PESTEL, SWOT, and Competitive Analysis.
                 </p>
               </div>
             </div>
@@ -168,9 +161,9 @@
               <div class="texts">
                 <h3>Marketing Plan</h3>
                 <p>
-                    We will assist you with a tailored marketing plan
-                    designed to enable you to sell your products successfully
-                    within these target markets.
+                  We will assist you with a tailored marketing plan designed to
+                  enable you to sell your products successfully within these
+                  target markets.
                 </p>
               </div>
             </div>
@@ -192,18 +185,14 @@
             <img src="images/mobile.jpg" alt="Android" />
             <div class="texts">
               <h3>Android</h3>
-              <p>
-                Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.
-              </p>
+              <p>Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.</p>
             </div>
           </div>
           <div class="col">
             <img src="images/windows.jpg" alt="Windwos" />
             <div class="texts">
               <h3>Windows</h3>
-              <p>
-                Requires Windows 10 or newer.
-              </p>
+              <p>Requires Windows 10 or newer.</p>
             </div>
           </div>
           <div class="col">
@@ -228,11 +217,9 @@
         <div class="content">
           <div class="texts">
             <p>
-                A single click allows you to
-                simultaneously send thousands
-                of emails and engage in
-                conversations with your
-                worldwide target customers.
+              A single click allows you to simultaneously send thousands of
+              emails and engage in conversations with your worldwide target
+              customers.
             </p>
             <p>
               <!-- You may add some text here -->
@@ -241,7 +228,6 @@
           <div class="shapes">
             <img src="images/ai.jpg" alt="plant" />
           </div>
-          
         </div>
       </div>
     </div>
@@ -254,8 +240,12 @@
         <div class="section-body">
           <h2>Feel free to drop us a line at:</h2>
           <!-- <h3>ahmeed.elbaz@gmail.com</h3> -->
-          <a href="mailto:info@e-markets.org"><i class="fa-solid fa-mail-bulk"></i> info@e-markets.org</a>
-          <a href="tel:+201211766667"><i class="fa-solid fa-phone"></i> +201211766667</a>
+          <a href="mailto:info@e-markets.org"
+            ><i class="fa-solid fa-mail-bulk"></i> info@e-markets.org</a
+          >
+          <a href="tel:+201211766667"
+            ><i class="fa-solid fa-phone"></i> +201211766667</a
+          >
           <div class="contacts">
             <p>Find us on social networks:</p>
             <a href="https://www.facebook.com/EMarkets.Eg">
@@ -274,9 +264,10 @@
               <i class="fa-brands fa-youtube"></i>
             </a>
           </div>
-          <a href="https://maps.app.goo.gl/5Ck5bi9nKmUcmWEj6"><i class="fa-solid fa-map-marker-alt"></i> 45 Qambiz st, infront of shooting club gate
-            -Dokki- Giza, Egypt
-            </a>
+          <a href="https://maps.app.goo.gl/5Ck5bi9nKmUcmWEj6"
+            ><i class="fa-solid fa-map-marker-alt"></i> 45 Qambiz st, infront of
+            shooting club gate -Dokki- Giza, Egypt
+          </a>
         </div>
       </div>
     </div>
