--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <span></span>
           </span>
           <ul>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#database">E-Markets Database</a></li>
+            <li><a href="#application">Our Application</a></li>
+            <li><a href="#download">Download</a></li>
+            <li><a href="#tools"> Marketing tools</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
