changed some ids in html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="#database">E-Markets Database</a></li>
             <li><a href="#application">Our Application</a></li>
             <li><a href="#download">Download</a></li>
-            <li><a href="#tools"> Marketing tools</a></li>
+            <li><a href="#tools">Marketing tools</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
     </div>
     <!-- End Landing Section -->
     <!-- Start Features Section -->
-    <div class="features">
+    <div class="features" , id="about">
       <div class="container">
         <div class="feat">
           <i class="fa-solid fa-info-circle fa-3x"></i>
@@ -114,7 +114,7 @@
     </div>
     <!-- End Database Section -->
     <!-- Start Services -->
-    <div class="services" id="services">
+    <div class="services" id="application">
       <div class="container">
         <h2 class="special-headings">Our Application</h2>
         <p>
@@ -178,7 +178,7 @@
     </div>
     <!-- End Services -->
     <!-- Start Portfolio -->
-    <div class="portfolio" id="portfolio">
+    <div class="portfolio" id="download">
       <div class="container">
         <h2 class="special-headings">Download</h2>
         <p>Use E-Markets across your devices.</p>
@@ -212,7 +212,7 @@
     </div>
     <!-- End Portfolio -->
     <!-- Start About Section -->
-    <div class="about" id="about">
+    <div class="about" id="tools">
       <div class="container">
         <h2 class="special-headings">Marketing tools</h2>
         <!-- <p>Marketing tools</p> -->
