Update social media links styling
Add a class "social" to social media links for consistent styling across the website. Set margin for better spacing. Update font size for social media links in the contact section.

--- a/index.html
+++ b/index.html
@@ -251,19 +251,19 @@
           >
           <div class="contacts">
             <p>Find us on social networks:</p>
-            <a href="https://www.facebook.com/EMarkets.Eg">
+            <a class="social" href="https://www.facebook.com/EMarkets.Eg">
               <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="http://linkedin.com/company/emarkets-eg">
+            <a class="social" href="http://linkedin.com/company/emarkets-eg">
               <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="http://twitter.com/emarkets_eg">
+            <a class="social" href="http://twitter.com/emarkets_eg">
               <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="https://www.instagram.com/emarkets_eg">
+            <a class="social" href="https://www.instagram.com/emarkets_eg">
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://www.youtube.com/@E-Markets-eg">
+            <a class="social" href="https://www.youtube.com/@E-Markets-eg">
               <i class="fa-brands fa-youtube"></i>
             </a>
           </div>
