Add WhatsApp floating icon to index.html
Add a floating WhatsApp icon to index.html for easy access to WhatsApp chat.

--- a/index.html
+++ b/index.html
@@ -280,5 +280,12 @@
       &copy; 2024 - <span class="emarkets">E-Markets</span>, All Right Reserved
     </footer>
     <!-- End Footer -->
+    <a
+      href="https://web.whatsapp.com/send?phone=+201211766667"
+      target="_blank"
+      class="whatsapp-icon"
+    >
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
   </body>
 </html>
