Update header styles for better navigation
Added fixed position, z-index, background color, and width to header for improved
navigation. Also included responsive design for header links and adjusted
portfolio project hover margin.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <div class="header">
       <div class="container">
         <img src="images/logo.png" alt="E-markets" class="logo" />
+        <div class="header-links">
+          <p><a href="#about">About</a></p>
+          <p><a href="#database">E-Markets Database</a></p>
+          <p><a href="#application">Our Application</a></p>
+          <p><a href="#download">Download</a></p>
+          <p><a href="#tools">Marketing tools</a></p>
+          <p><a href="#contact">Contact</a></p>
+        </div>
         <div class="links">
           <span class="icon">
             <span></span>
