Add responsive styling for WhatsApp contact links
Hide/show WhatsApp contact links based on screen size for better user experience.
Include styling adjustments for mobile and desktop versions of the links.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img src="images/logo.png" alt="E-markets" class="logo" />
+        <a href="https://e-markets.org/"
+          ><img src="images/logo.png" alt="E-markets" class="logo"
+        /></a>
         <div class="header-links">
           <p><a href="#about">About</a></p>
           <p><a href="#database">E-Markets Database</a></p>
@@ -288,10 +290,19 @@
       &copy; 2024 - <span class="emarkets">E-Markets</span>, All Right Reserved
     </footer>
     <!-- End Footer -->
+    <!-- Desktop link -->
     <a
       href="https://web.whatsapp.com/send?phone=+201211766667"
       target="_blank"
-      class="whatsapp-icon"
+      class="whatsapp-icon whatsapp-desktop"
+    >
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
+    <!-- Mobile link -->
+    <a
+      href="https://api.whatsapp.com/send?phone=+201211766667"
+      target="_blank"
+      class="whatsapp-icon whatsapp-mobile"
     >
       <i class="fa-brands fa-whatsapp"></i>
     </a>
