Update slider styles and functionality
Adjust slider container and slide styles for better layout
and visibility. Update JavaScript to handle slide transitions
automatically every 3 seconds.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div> -->
       <div class="slider">
         <div class="slides">
-          <img src="images/ship.jpg" style="width: 100%" class="slide slide1" />
+          <img src="images/ship.jpg" style="width: 100%" class="slide active" />
           <img src="images/01.webp" style="width: 100%" class="slide" />
           <img src="images/02.webp" style="width: 100%" class="slide" />
           <!-- Add more images as needed -->
