--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <img src="images/ship.jpg" style="width: 100%" class="slide active" />
           <img src="images/01.webp" style="width: 100%" class="slide" />
           <img src="images/02.webp" style="width: 100%" class="slide" />
+          <img src="images/03.webp" style="width: 100%" class="slide" />
           <!-- Add more images as needed -->
         </div>
         <button class="btn prev" onclick="moveSlide(-1)">&#10094;</button>
