--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       </div> -->
       <div class="slider">
         <div class="slides">
-          <img src="images/ship.jpg" style="width: 100%" class="slide active" />
-          <img src="images/01.webp" style="width: 100%" class="slide" />
-          <img src="images/02.webp" style="width: 100%" class="slide" />
-          <img src="images/03.webp" style="width: 100%" class="slide" />
+          <img src="images/ship.jpg" class="slide active" />
+          <img src="images/01.webp" class="slide" />
+          <img src="images/02.webp" class="slide" />
+          <img src="images/03.webp" class="slide" />
           <!-- Add more images as needed -->
         </div>
         <button class="btn prev" onclick="moveSlide(-1)">&#10094;</button>
